added quotes rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
 	},
 	"rules": {
 		"linebreak-style": [ "error", "windows" ],
-		"semi": [ "error", "always" ]
+		"semi": [ "error", "always" ],
+		"quotes": [ "error", "single" ]
 	}
 }
