--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
 		"axios": "^0.18.0",
 		"eslint": "^5.15.1",
 		"jasmine": "^3.3.1"
+	},
+	"dependencies": {
+		"markdown-it": "^8.4.2",
+		"underscore": "^1.9.1",
+		"xml-js": "^1.6.11"
 	}
 }
