--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "jasmine",
-		"lint": "./node_modules/.bin/eslint ./"
+		"lint": "./node_modules/.bin/eslint ./ --cache --ignore-pattern .gitignore",
+		"precommit-msg": "echo 'Pre-commit checks...' && exit 0"
 	},
+	"pre-commit": [ "precommit-msg", "lint" ],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"axios": "^0.18.0",
 		"eslint": "^5.15.1",
-		"jasmine": "^3.3.1"
+		"pre-commit": "^1.2.2"
 	},
 	"dependencies": {
+		"axios": "^0.18.0",
+		"jasmine": "^3.3.1",
 		"markdown-it": "^8.4.2",
 		"underscore": "^1.9.1",
 		"xml-js": "^1.6.11"
