--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
 	"rules": {
 		"linebreak-style": [ "error", "windows" ],
 		"semi": [ "error", "always" ],
-		"quotes": [ "error", "single" ]
+    "quotes": [ "error", "single" ],
+    "no-console": "warn"
 	}
 }
