--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
 	"env": {
 		"browser": true,
 		"commonjs": true,
-		"es6": false,
+		"es6": true,
 		"jasmine": true,
 		"protractor": true
 	},
@@ -17,7 +17,7 @@
 	"rules": {
 		"linebreak-style": [ "error", "windows" ],
 		"semi": [ "error", "always" ],
-    "quotes": [ "error", "single" ],
-    "no-console": "warn"
+		"quotes": [ "error", "single" ],
+		"no-console": "warn"
 	}
 }
